@@ -1,17 +1,16 @@
-# $NetBSD: Makefile,v 1.7 2018/07/28 14:40:47 brook Exp $
+# $NetBSD: Makefile,v 1.8 2019/07/31 19:17:39 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/combinat/
-COMMENT=	Routines for combinatorics
+COMMENT=	Combinatorics utilities
 LICENSE=	gnu-gpl-v2
 
 R_PKGNAME=	combinat
 R_PKGVER=	0.0-8
 
-post-extract:
-	echo 'exportPattern("^[^\\.]")' > ${WRKSRC}/NAMESPACE
+USE_LANGUAGES=	# none
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
