@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.4 2015/11/03 23:33:28 agc Exp $
+$NetBSD: distinfo,v 1.5 2019/07/31 19:17:39 brook Exp $
 
-SHA1 (R/combinat_0.0-8.tar.gz) = e6304b28245ee27747ded378406f64c106e8389b
-RMD160 (R/combinat_0.0-8.tar.gz) = eee75e95af8ada7987aa26336a1faa34aad5a2ca
-SHA512 (R/combinat_0.0-8.tar.gz) = 4fd5d354f7c48b56ad918e666b04d36a7ee56cfd699a5c2b60dae4908de448403b3f71884a4ac7769eb4df4354c749fc15d0fecb648c16e65bf670d2a709e625
-Size (R/combinat_0.0-8.tar.gz) = 7973 bytes
+SHA1 (R/combinat_0.0-8.tar.gz) = 8ddc471779384bff479013e6c5c3a1dbb0ee138b
+RMD160 (R/combinat_0.0-8.tar.gz) = 66a1a842b0eb2c1b9ba03186bb1a054a9e636a1b
+SHA512 (R/combinat_0.0-8.tar.gz) = 57e52b6f6bdc08d9d3647ffeca1c0d34a8da727feb1c4a26442155b6399c79f4ef55563af9706181a9c725d68e6de93d8e9003fa643d28b88acf006e04ac7d22
+Size (R/combinat_0.0-8.tar.gz) = 9197 bytes
